--- a/package.json
+++ b/package.json
@@ -167,7 +167,9 @@
     "@types/node": "17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-actions": "^2.6.2",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -232,7 +234,10 @@
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "regenerator-runtime": "^0.13.9"
   },
   "devEngines": {
