--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-actions": "^2.6.2",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -238,6 +239,7 @@
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.4",
     "regenerator-runtime": "^0.13.9"
   },
   "devEngines": {
